sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var test:Boolean = false;
	val longeur:int = getNombreValeurs();
	do {
		for (i <- 0 to longeur-2 by 1){
			test = false;
			if (!plusPetit(i,i+1)){
				echange(i,i+1);
				test = true;
			} else {
				test = false;
			}
		}
	} while (test == true)

}
